--- a/wine/wine.html
+++ b/wine/wine.html
@@ -655,15 +655,16 @@ div.title {text-align: center;}
         <div class="title">
           <h1 class="title">Wine Quality</h1>
           <h5>Ronald Bactawar</h5>
-          <h5>2020-09-23</h5>
+          <h5>2020-10-01</h5>
         </div>
 
         
 <pre class='hljl'>
 <span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>Pkg</span><span class='hljl-t'>
 </span><span class='hljl-n'>Pkg</span><span class='hljl-oB'>.</span><span class='hljl-nf'>activate</span><span class='hljl-p'>(</span><span class='hljl-s'>&quot;my_environment&quot;</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>shared</span><span class='hljl-oB'>=</span><span class='hljl-kc'>true</span><span class='hljl-p'>)</span><span class='hljl-t'>
-</span><span class='hljl-n'>Pkg</span><span class='hljl-oB'>.</span><span class='hljl-nf'>add</span><span class='hljl-p'>(</span><span class='hljl-s'>&quot;MLJFlux&quot;</span><span class='hljl-p'>)</span><span class='hljl-t'>
 </span><span class='hljl-n'>Pkg</span><span class='hljl-oB'>.</span><span class='hljl-nf'>add</span><span class='hljl-p'>(</span><span class='hljl-s'>&quot;MLJ&quot;</span><span class='hljl-p'>)</span><span class='hljl-t'>
+</span><span class='hljl-n'>Pkg</span><span class='hljl-oB'>.</span><span class='hljl-nf'>add</span><span class='hljl-p'>(</span><span class='hljl-s'>&quot;MLJBase&quot;</span><span class='hljl-p'>)</span><span class='hljl-t'>
+</span><span class='hljl-n'>Pkg</span><span class='hljl-oB'>.</span><span class='hljl-nf'>add</span><span class='hljl-p'>(</span><span class='hljl-s'>&quot;MLJFlux&quot;</span><span class='hljl-p'>)</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>Dates</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>Statistics</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>DataFrames</span><span class='hljl-t'>
@@ -671,6 +672,7 @@ div.title {text-align: center;}
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>VegaLite</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>MLJ</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>MLJBase</span><span class='hljl-t'>
+</span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>Flux</span><span class='hljl-t'>
 </span><span class='hljl-k'>using</span><span class='hljl-t'> </span><span class='hljl-n'>MLJFlux</span>
 </pre>
 
@@ -780,19 +782,29 @@ div.title {text-align: center;}
 
 
 <pre class='hljl'>
-<span class='hljl-cs'># Load nn model</span><span class='hljl-t'>
-</span><span class='hljl-nd'>@load</span><span class='hljl-t'> </span><span class='hljl-n'>NeuralNetworkClassifier</span><span class='hljl-t'>
+<span class='hljl-nd'>@load</span><span class='hljl-t'> </span><span class='hljl-n'>NeuralNetworkClassifier</span><span class='hljl-p'>;</span><span class='hljl-t'>
 
-</span><span class='hljl-cs'># Create pipeline</span><span class='hljl-t'>
-</span><span class='hljl-n'>pipe</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nd'>@pipeline</span><span class='hljl-t'> </span><span class='hljl-nf'>MyPipe1</span><span class='hljl-p'>(</span><span class='hljl-t'>
-  </span><span class='hljl-n'>std</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nf'>Standardizer</span><span class='hljl-p'>(),</span><span class='hljl-t'>
-  </span><span class='hljl-n'>nnc</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nf'>NeuralNetworkClassifier</span><span class='hljl-p'>(),</span><span class='hljl-t'>
-</span><span class='hljl-p'>)</span><span class='hljl-t'> </span><span class='hljl-n'>prediction_type</span><span class='hljl-oB'>=:</span><span class='hljl-n'>probabilistic</span><span class='hljl-t'>
+</span><span class='hljl-cs'># Create a builder of ANN with two hiden layers</span><span class='hljl-t'>
+</span><span class='hljl-k'>mutable struct</span><span class='hljl-t'> </span><span class='hljl-n'>MyANNBuilder</span><span class='hljl-t'> </span><span class='hljl-oB'>&lt;:</span><span class='hljl-t'> </span><span class='hljl-n'>MLJFlux</span><span class='hljl-oB'>.</span><span class='hljl-n'>Builder</span><span class='hljl-t'>
+  </span><span class='hljl-n'>h1</span><span class='hljl-oB'>::</span><span class='hljl-n'>Int64</span><span class='hljl-t'> </span><span class='hljl-cs'># number of neurons in first hiden layer</span><span class='hljl-t'>
+  </span><span class='hljl-n'>h2</span><span class='hljl-oB'>::</span><span class='hljl-n'>Int64</span><span class='hljl-t'> </span><span class='hljl-cs'># number of neurons in second hidden layer</span><span class='hljl-t'>
+</span><span class='hljl-k'>end</span><span class='hljl-t'>
 
 
-</span><span class='hljl-cs'># Modifiy the parameters of the pipeline</span><span class='hljl-t'>
-</span><span class='hljl-n'>pipe</span><span class='hljl-oB'>.</span><span class='hljl-n'>nnc</span><span class='hljl-oB'>.</span><span class='hljl-n'>epochs</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-ni'>8</span><span class='hljl-p'>;</span><span class='hljl-t'>
-</span><span class='hljl-n'>pipe</span><span class='hljl-oB'>.</span><span class='hljl-n'>nnc</span><span class='hljl-oB'>.</span><span class='hljl-n'>batch_size</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-ni'>1</span><span class='hljl-p'>;</span><span class='hljl-t'>
+</span><span class='hljl-cs'># Define the build Function </span><span class='hljl-t'>
+</span><span class='hljl-k'>function</span><span class='hljl-t'> </span><span class='hljl-n'>MLJFlux</span><span class='hljl-oB'>.</span><span class='hljl-nf'>build</span><span class='hljl-p'>(</span><span class='hljl-n'>B</span><span class='hljl-oB'>::</span><span class='hljl-n'>MyANNBuilder</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>n_in</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>n_out</span><span class='hljl-p'>)</span><span class='hljl-t'>
+  </span><span class='hljl-n'>h1</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-n'>B</span><span class='hljl-oB'>.</span><span class='hljl-n'>h1</span><span class='hljl-t'>
+  </span><span class='hljl-n'>h2</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-n'>B</span><span class='hljl-oB'>.</span><span class='hljl-n'>h2</span><span class='hljl-t'>  
+  </span><span class='hljl-n'>mychain</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nf'>Chain</span><span class='hljl-p'>(</span><span class='hljl-nf'>Dense</span><span class='hljl-p'>(</span><span class='hljl-n'>n_in</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>h1</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>relu</span><span class='hljl-p'>),</span><span class='hljl-t'> </span><span class='hljl-nf'>Dense</span><span class='hljl-p'>(</span><span class='hljl-n'>h1</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>h2</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>relu</span><span class='hljl-p'>),</span><span class='hljl-t'> </span><span class='hljl-nf'>Dense</span><span class='hljl-p'>(</span><span class='hljl-n'>h2</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>n_out</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>relu</span><span class='hljl-p'>))</span><span class='hljl-t'>
+  </span><span class='hljl-k'>return</span><span class='hljl-p'>(</span><span class='hljl-n'>mychain</span><span class='hljl-p'>)</span><span class='hljl-t'>  
+</span><span class='hljl-k'>end</span><span class='hljl-t'>
+
+</span><span class='hljl-cs'># Pipeline with a standardizer and custom NeuralNetworkClassifier</span><span class='hljl-t'>
+</span><span class='hljl-n'>pipe</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nd'>@pipeline</span><span class='hljl-p'>(</span><span class='hljl-t'>
+  </span><span class='hljl-nf'>Standardizer</span><span class='hljl-p'>(),</span><span class='hljl-t'>
+  </span><span class='hljl-nf'>NeuralNetworkClassifier</span><span class='hljl-p'>(</span><span class='hljl-n'>builder</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nf'>MyANNBuilder</span><span class='hljl-p'>(</span><span class='hljl-ni'>10</span><span class='hljl-p'>,</span><span class='hljl-ni'>10</span><span class='hljl-p'>),</span><span class='hljl-t'> </span><span class='hljl-n'>epochs</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-ni'>8</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>batch_size</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-ni'>1</span><span class='hljl-p'>),</span><span class='hljl-t'>
+  </span><span class='hljl-n'>prediction_type</span><span class='hljl-oB'>=:</span><span class='hljl-n'>probabilistic</span><span class='hljl-t'>
+</span><span class='hljl-p'>)</span><span class='hljl-t'>
 
 </span><span class='hljl-cs'># Fit machine</span><span class='hljl-t'>
 </span><span class='hljl-n'>mach</span><span class='hljl-t'> </span><span class='hljl-oB'>=</span><span class='hljl-t'> </span><span class='hljl-nf'>machine</span><span class='hljl-p'>(</span><span class='hljl-n'>pipe</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>Xm</span><span class='hljl-p'>,</span><span class='hljl-t'> </span><span class='hljl-n'>ym</span><span class='hljl-p'>);</span><span class='hljl-t'>
@@ -803,14 +815,14 @@ div.title {text-align: center;}
 
 
 <pre class="output">
-MyPipe1&#40;
-    std &#61; Standardizer&#40;
+Pipeline379&#40;
+    standardizer &#61; Standardizer&#40;
             features &#61; Symbol&#91;&#93;,
             ignore &#61; false,
             ordered_factor &#61; false,
             count &#61; false&#41;,
-    nnc &#61; NeuralNetworkClassifier&#40;
-            builder &#61; Short @371,
+    neural_network_classifier &#61; NeuralNetworkClassifier&#40;
+            builder &#61; MyANNBuilder @207,
             finaliser &#61; NNlib.softmax,
             optimiser &#61; Flux.Optimise.ADAM&#40;0.001, &#40;0.9, 0.999&#41;, IdDict&#123;Any,
 Any&#125;&#40;&#41;&#41;,
@@ -819,7 +831,7 @@ Any&#125;&#40;&#41;&#41;,
             batch_size &#61; 1,
             lambda &#61; 0.0,
             alpha &#61; 0.0,
-            optimiser_changes_trigger_retraining &#61; false&#41;&#41; @808
+            optimiser_changes_trigger_retraining &#61; false&#41;&#41; @064
 </pre>
 
 
@@ -851,12 +863,14 @@ Any&#125;&#40;&#41;&#41;,
 ┌──────────────────────────────────────┬───────────────┬─────────────────┐
 │ _.measure                            │ _.measurement │ _.per_fold      │
 ├──────────────────────────────────────┼───────────────┼─────────────────┤
-│ cross_entropy                        │ 0.875         │ Float32&#91;0.875&#93;  │
-│ BrierScore&#123;MLJBase.UnivariateFinite&#125; │ -0.539        │ Float32&#91;-0.539&#93; │
-│ area_under_curve                     │ 0.821         │ &#91;0.821&#93;         │
+│ cross_entropy                        │ 0.832         │ Float32&#91;0.832&#93;  │
+│ BrierScore&#123;MLJBase.UnivariateFinite&#125; │ -0.515        │ Float32&#91;-0.515&#93; │
+│ area_under_curve                     │ 0.84          │ &#91;0.84&#93;          │
 └──────────────────────────────────────┴───────────────┴─────────────────┘
-_.per_observation &#61; &#91;&#91;&#91;0.92, 0.776, ..., 0.829&#93;&#93;, &#91;&#91;-0.624, -0.465, ..., -0
-.535&#93;&#93;, missing&#93;
+_.per_observation &#61; &#91;&#91;&#91;1.04, 0.642, ..., 0.446&#93;&#93;, &#91;&#91;-0.766, -0.395, ..., -0
+.194&#93;&#93;, missing&#93;
+_.fitted_params_per_fold &#61; &#91; … &#93;
+_.report_per_fold &#61; &#91; … &#93;
 </pre>
 
 
@@ -873,7 +887,7 @@ _.per_observation &#61; &#91;&#91;&#91;0.92, 0.776, ..., 0.829&#93;&#93;, &#91;&
 
 
 <pre class="output">
-The final accuracy is 0.556
+The final accuracy is 0.594
 </pre>
 
 
@@ -882,7 +896,7 @@ The final accuracy is 0.556
         <div class="footer">
           <p>
             Published from <a href="wine.jmd">wine.jmd</a>
-            using <a href="http://github.com/JunoLab/Weave.jl">Weave.jl</a> v0.10.3 on 2020-09-23.
+            using <a href="http://github.com/JunoLab/Weave.jl">Weave.jl</a> v0.10.3 on 2020-10-01.
           </p>
         </div>
       </div>
